B&L QA/objects/Physician_Visit__c.object
<CustomObject>
    <description>APACSU object to collect details during Physician/Surgeon visit.</description>
    <fields>
        <fullName>AMO__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>AMO</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>INDSU formula field to collect account id to get account profile.</description>
        <formula>Physician__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INDSU Field for getting account profile related data.</description>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Physician Visit</relationshipLabel>
        <relationshipName>Physician_Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acrysof_3_piece__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>Acrysof 3 piece</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_3_piece_rate__c</fullName>
        <description>IndiaSU field to collect Competitor rate for Dr.</description>
        <label>Acrysof 3 piece rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_IQ__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail
Change field label name to &quot;enVista Toric&quot; from &quot;Acrysof-IQ&quot; to make it B+L product</description>
        <label>enVista Toric</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_IQ_rate__c</fullName>
        <description>IndiaSU field to collect Competitor rate for Dr.</description>
        <label>Acrysof IQ rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_ReStor__c</fullName>
        <description>APACSU field to Collect number of Acrysof ReStor used.</description>
        <label>Acrysof ReStor</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_ReStor_rate__c</fullName>
        <description>APACSU field to Collect rate of Acrysof ReStor</description>
        <label>Acrysof ReStor rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_Single_piece__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>Acrysof Single piece</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_Single_piece_rate__c</fullName>
        <description>IndiaSU field to collect Competitor rate for Dr.</description>
        <label>Acrysof Single piece rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_Toric_Rate__c</fullName>
        <label>Acrysof Toric Rate</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_Toric__c</fullName>
        <description>APACSU field to Collect number of Acrysof Toric</description>
        <label>Acrysof Toric</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_User_IND__c</fullName>
        <description>If &quot;Active User&quot; is &quot;Yes&quot;, &quot;Lens usage for the month&quot; cannot be left Blank.</description>
        <inlineHelpText>If &quot;Active User&quot; is &quot;Yes&quot;, &quot;Lens usage for the month&quot; cannot be left Blank.</inlineHelpText>
        <label>Active User (IND)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>IndiaSU field to collect date on which the activity has occurred</description>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Id__c</fullName>
        <description>Created for KOREA SOLTA.</description>
        <label>Activity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Akreos_AO__c</fullName>
        <description>IndiaSU field to collect B&amp;L Implantation product detail (No of IOL&apos;s)</description>
        <label>Akreos AO</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akreos_Adapt__c</fullName>
        <description>APACSU field to collect Akreos Adapt used in implantations</description>
        <label>Akreos Adapt</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akreos_MIL__c</fullName>
        <description>IndiaSU field to collect B&amp;L Implantation product detail (No of IOL&apos;s)</description>
        <label>Akreos MIL</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akreos_MI_60__c</fullName>
        <description>APACSU field to collect number of Akreos MI-60 used.</description>
        <label>Akreos MI-60</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akreos__c</fullName>
        <description>IndiaSU field to collect B&amp;L Implantation product detail (No of IOL&apos;s)</description>
        <label>Akreos</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Calls_For_Installed_Equipme__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to collect application call information</description>
        <label>Application Calls (For Installed Equipme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blank1__c</fullName>
        <formula>TRIM(&apos;&apos;)</formula>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundling_Competitor__c</fullName>
        <description>Competition Bundling</description>
        <label>Bundling Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>Ziess</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallPlanDetailId__c</fullName>
        <description>Created for KOREA SOLTA</description>
        <label>CallPlanDetailId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallPlanId__c</fullName>
        <description>Created by KOREA SOLTA</description>
        <label>CallPlanId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Description__c</fullName>
        <description>APAC CHNSU field:The Detail Information of Physician Visit</description>
        <label>Call Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Duration_Mns__c</fullName>
        <description>CHNSU field to collect the time duration taken for the call to complete</description>
        <label>Call Duration Mns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5mins</fullName>
                </value>
                <value>
                    <fullName>6-10mins</fullName>
                </value>
                <value>
                    <fullName>11-15mins</fullName>
                </value>
                <value>
                    <fullName>16-20mins</fullName>
                </value>
                <value>
                    <fullName>21-25mins</fullName>
                </value>
                <value>
                    <fullName>26-30mins</fullName>
                </value>
                <value>
                    <fullName>31-40mins</fullName>
                </value>
                <value>
                    <fullName>41-50mins</fullName>
                </value>
                <value>
                    <fullName>51-60mins</fullName>
                </value>
                <value>
                    <fullName>1-1.25hrs</fullName>
                </value>
                <value>
                    <fullName>1.25-1.5hrs</fullName>
                </value>
                <value>
                    <fullName>1.5-1.75hrs</fullName>
                </value>
                <value>
                    <fullName>1.75-2hrs</fullName>
                </value>
                <value>
                    <fullName>2-2.5hrs</fullName>
                </value>
                <value>
                    <fullName>2.5-3hrs</fullName>
                </value>
                <value>
                    <fullName>3-3.5hrs</fullName>
                </value>
                <value>
                    <fullName>3.5-4hrs</fullName>
                </value>
                <value>
                    <fullName>4-5hrs</fullName>
                </value>
                <value>
                    <fullName>5-6hrs</fullName>
                </value>
                <value>
                    <fullName>6-8hrs</fullName>
                </value>
                <value>
                    <fullName>&gt;8hrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_No__c</fullName>
        <description>Equals to Physician Visit Name</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Objective_Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to identify the call is productive</description>
        <label>Call Objective Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Objective__c</fullName>
        <description>IndiaSU field to collect objective of the call</description>
        <label>Call Objective</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Ojective_CHN__c</fullName>
        <label>Call Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Develop New Customer</fullName>
                </value>
                <value>
                    <fullName>increase acceptance/units of products</fullName>
                </value>
                <value>
                    <fullName>Introduce new product</fullName>
                </value>
                <value>
                    <fullName>Follow up product questions</fullName>
                </value>
                <value>
                    <fullName>Follow up product complaints</fullName>
                </value>
                <value>
                    <fullName>Collect competitive product information</fullName>
                </value>
                <value>
                    <fullName>Build customer relationship</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Demo Call</fullName>
                </value>
                <value>
                    <fullName>AMC/CMC Dicussion</fullName>
                </value>
                <value>
                    <fullName>Unplanned Call</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Application Call</fullName>
                </value>
                <value>
                    <fullName>Accessories Discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>India SU field to collect type of call visit.</description>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>OT Visit</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Followup for Clinical outcomes</fullName>
                </value>
                <value>
                    <fullName>Clinical Calculations</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canon_Staar__c</fullName>
        <description>APACSU field to Collect number of Canon-Staar used</description>
        <label>Canon-Staar</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Canon_Staar_rate__c</fullName>
        <description>APACSU field to Collect Canon-Staar rate</description>
        <label>Canon-Staar rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cataract_Procedure_in_the_month__c</fullName>
        <description>IndiaSU field to collect cataract procedure done in the month by the physician</description>
        <label>Cataract Procedure</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Changed_under_CMC_Warranty__c</fullName>
        <description>IndiaSU field to collect whether the product change is covered under CMC/Warranty</description>
        <label>Changed under CMC/Warranty</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoachKOR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coach(KOR)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>KORSU</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>startsWith</operation>
                <value>KORSU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Physician_Visit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach_CHN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CHNSU field to select the coach user</description>
        <label>Coach (CHN)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>请选择CHN用户</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>CHN</value>
            </filterItems>
            <infoMessage>请选择你的上级用户为辅导人</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PhysicianVisit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach_IND__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coach(IND)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>startsWith</operation>
                <value>INDSU</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>INDSU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Physician_Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coaching_Period__c</fullName>
        <description>CHNSU field to allow the rep to choose the duration (in mins) of the coaching. To be used while reporting a call.</description>
        <label>Coaching Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 minutes</fullName>
                </value>
                <value>
                    <fullName>6-10 minutes</fullName>
                </value>
                <value>
                    <fullName>11-15 minutes</fullName>
                </value>
                <value>
                    <fullName>16-20 minutes</fullName>
                </value>
                <value>
                    <fullName>21-25 minutes</fullName>
                </value>
                <value>
                    <fullName>25-30 minutes</fullName>
                </value>
                <value>
                    <fullName>31-40 minutes</fullName>
                </value>
                <value>
                    <fullName>41-50 minutes</fullName>
                </value>
                <value>
                    <fullName>51-60 minutes</fullName>
                </value>
                <value>
                    <fullName>1-1.25 hours</fullName>
                </value>
                <value>
                    <fullName>1.25-1.5 hours</fullName>
                </value>
                <value>
                    <fullName>1.5-1.75 hours</fullName>
                </value>
                <value>
                    <fullName>1.75-2 hours</fullName>
                </value>
                <value>
                    <fullName>2-2.5 hours</fullName>
                </value>
                <value>
                    <fullName>2.5-3 hours</fullName>
                </value>
                <value>
                    <fullName>3-3.5 hours</fullName>
                </value>
                <value>
                    <fullName>3.5-4 hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Activity__c</fullName>
        <description>IndiaSU field to collect competitor activity at physician place</description>
        <label>Competitor Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Complaint Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Tel__c</fullName>
        <description>APAC CHNSU field:The telephone number of the contact,</description>
        <label>Contact Tel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>APAC CHNSU field:The Contact of the hospital</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_of_Part_Accessories__c</fullName>
        <description>IndiaSU field to collect the cost of product/accessories replaced</description>
        <label>Cost of Part/Accessories</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crystalens__c</fullName>
        <description>IndiaSU field to collect B&amp;L Implantation product detail (No of IOL&apos;s)</description>
        <label>Crystalens</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Location_Latitude__c</fullName>
        <description>In this field we are going to strore Latitude of contact address in GoogleMapsEmbeddedPhysicianVisit page.</description>
        <label>Current Location Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Location_Longitude__c</fullName>
        <description>This field will store the latitude of current Address of contact</description>
        <label>Current Location Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Dealer Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demonstration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Demonstration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DistanceCalc__c</fullName>
        <description>This field will strores distance between Physician and Sales Rep Location</description>
        <label>DistanceCalc</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Segmentation__c</fullName>
        <label>Doctor Segmentation</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dr_Objection_1__c</fullName>
        <description>IndiaSU field to collect Dr Objection for key driver 1</description>
        <label>Dr Objection 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dr_Objection_2__c</fullName>
        <description>IndiaSU field to collect Dr Objection for key driver 2</description>
        <label>Dr Objection 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dr_Objection_3__c</fullName>
        <description>IndiaSU field to collect Dr Objection for key driver 3</description>
        <label>Dr Objection 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <description>IndiaSU field to collect end description</description>
        <label>End time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enter_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for KOREA SOLTA Users.</description>
        <label>Call Reporting Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Envista__c</fullName>
        <label>Envista</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Bundling Competitor Expiry Date</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Remarks__c</fullName>
        <description>Field Created for KOR SOLTA Team.</description>
        <label>General Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hanitta__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>Hanitta</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <description>CHNSU formula field to capture the Hospital Name of the selected Physician</description>
        <formula>Physician__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hospital Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The hospital of the physician.</description>
        <label>Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Physician Visit</relationshipLabel>
        <relationshipName>Physician_Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_in_Surgery__c</fullName>
        <description>CHNSU field to capture the duration of time the sales rep is in surgery</description>
        <label>Hours in Surgery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.0</fullName>
                    <default>true</default>
                    <label>0.0</label>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>6.0</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7.0</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>8.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hoya__c</fullName>
        <description>APACSU field to Collect number of Hoya</description>
        <label>Hoya</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hoya_rate__c</fullName>
        <description>APACSU field to Collect Hoya rate</description>
        <label>Hoya rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_Competition_Remarks__c</fullName>
        <description>Implant Competition Remarks</description>
        <label>Implant Competition Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported_Foldable_Implant__c</fullName>
        <defaultValue>0</defaultValue>
        <description>IndiaSU field to collect number of imported foldable implanted</description>
        <label>Imported Foldable Implant</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Imported_Foldable_Implantations__c</fullName>
        <formula>Acrysof_3_piece__c  +  Acrysof_IQ__c  +  Acrysof_ReStor__c  +  Acrysof_Single_piece__c  +  Acrysof_Toric__c  +  Akreos_MI_60__c  +  Akreos_AO__c  + Akreos_Adapt__c  +  LI61_SE__c +  LI61_AO__c + Hoya__c + Canon_Staar__c + Tecnis__c + Sensar__c + Tecnis_Multifocal__c + ReZoom__c + Others__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Imported Foldable Implantations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_Call_With_ASM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to identify the call as a joint call with manager</description>
        <label>Joint Call With ASM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Field_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Field Work</label>
        <referenceTo>Joint_Field_Work__c</referenceTo>
        <relationshipLabel>Physician Visit</relationshipLabel>
        <relationshipName>Physician_Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Driver_1__c</fullName>
        <description>IndiaSU field to collect Key driver products</description>
        <label>Key Driver 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LI61 AO</fullName>
                </value>
                <value>
                    <fullName>LI61AOV</fullName>
                </value>
                <value>
                    <fullName>LI61 SE</fullName>
                </value>
                <value>
                    <fullName>AKREOS</fullName>
                </value>
                <value>
                    <fullName>AKREOS AO</fullName>
                </value>
                <value>
                    <fullName>AKREOS MIL</fullName>
                </value>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Spares &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Stellaris PC</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Akreos AO Micro Incision Lens</fullName>
                </value>
                <value>
                    <fullName>Akreos Advanced Optics Aspheric Lens</fullName>
                </value>
                <value>
                    <fullName>Akreos Adapt Acrylic Lens</fullName>
                </value>
                <value>
                    <fullName>Silicone LI61AOR Advanced Optics</fullName>
                </value>
                <value>
                    <fullName>Silicone LI61SE Square Edge</fullName>
                </value>
                <value>
                    <fullName>Stellaris Vision Enhancement System</fullName>
                </value>
                <value>
                    <fullName>Envista</fullName>
                </value>
                <value>
                    <fullName>Stellaris/PC</fullName>
                </value>
                <value>
                    <fullName>Millennium</fullName>
                </value>
                <value>
                    <fullName>Protege</fullName>
                </value>
                <value>
                    <fullName>Thermage</fullName>
                </value>
                <value>
                    <fullName>Fraxel</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>